--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "babel-preset-stage-2": "^6.18.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
     "multer": "^1.2.1",
     "multer-s3": "^2.5.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-middleware": "^1.9.0"
   },
